appId: com.lirune.reader
---
- launchApp:
    stopApp: true
- extendedWaitUntil:
    visible: "18 books in library"
    timeout: 120000
- scrollUntilVisible:
    element:
      text: "Apache Tika Word Doc (doc)"
    direction: DOWN
    timeout: 30000
- tapOn: "Apache Tika Word Doc (doc)"
- waitForAnimationToEnd:
    timeout: 10000
