appId: com.lirune.reader
---
- launchApp:
    stopApp: true
- extendedWaitUntil:
    visible: "18 books in library"
    timeout: 120000
- scrollUntilVisible:
    element:
      text: "Alice in Wonderland (azw)"
    direction: DOWN
    timeout: 30000
- tapOn: "Alice in Wonderland (azw)"
- waitForAnimationToEnd:
    timeout: 15000
